<!-- 
     Copyright (c) Lightstreamer Srl
    
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
    
     http://www.apache.org/licenses/LICENSE-2.0
    
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Lightstreamer GCM Stock Demo</string>
    <string name="sender_id">410908809197</string>
    <string name="no_data">N/A</string>
    <string name="stop">Pause Lightstreamer Connection</string>
    <string name="start">Restart Lightstreamer Connection</string>
    <string name="about">About this demo</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_streaming">Streaming</string>
    <string name="status_polling">Polling</string>
    <string name="status_stalled">Stalled</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_waiting">Disconnected, waiting to connect again</string>
    <string name="details">Details</string>
    <string name="open_detail_page">see details</string>
    <string name="last_price">Last Price</string>
    <string name="time">Time</string>
    <string name="pct_change">Change</string>
    <string name="bid">Bid</string>
    <string name="bid_quantity">Bid Size</string>
    <string name="ask">Ask</string>
    <string name="ask_quantity">Ask Size</string>
    <string name="open_price">Open</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="lightstreamer">Lightstreamer</string>
    
    <string name="host">http://push.lightstreamer.com</string>
    
</resources>
