<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (c) Lightstreamer Srl
    
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
    
     http://www.apache.org/licenses/LICENSE-2.0
    
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/d_stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_clearTriggers"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:onClick="onClearTriggersBtnClicked"
            android:text="Clear Triggers" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.androidplot.xy.XYPlot
            android:id="@+id/mySimpleXYPlot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ap:graphMarginBottom="20dp"
            ap:graphMarginLeft="20dp"
            ap:graphMarginRight="0dp"
            ap:graphMarginTop="0dp"
            ap:lineLabelInsetBottom="-15dp"
            ap:lineLabelInsetLeft="-15dp"
            ap:lineLabelTextSizeBottom="@dimen/domain_label_font_size"
            ap:lineLabelTextSizeLeft="@dimen/range_label_font_size"
            ap:lineLabels="left|bottom" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/last_price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_last_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/pct_change"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_pct_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/open_price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_open_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/bid"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_bid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/ask"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_ask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/bid_quantity"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_bid_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/ask_quantity"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_ask_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/min"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/max"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggle_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/background"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_notifications"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/pn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTogglePNClicked"
            android:text="@+id/push_notifications" />

    </LinearLayout>


</LinearLayout>